[gd_scene load_steps=6 format=3 uid="uid://dk0bcfpbo130r"]

[ext_resource type="Script" path="res://scenes/sell_portal/sell_portal.gd" id="1_gt8yb"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://assets/2d_outline_shader.tres" id="1_t3wda"]
[ext_resource type="Texture2D" uid="uid://b1ro1ssup7dcp" path="res://assets/tiles.png" id="2_e1nv4"]
[ext_resource type="Script" path="res://components/outline_highlighter.gd" id="3_534p2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dhngt"]
radius = 24.0

[node name="SellPortal" type="Area2D"]
script = ExtResource("1_gt8yb")

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("1_t3wda")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(16, 16)
texture = ExtResource("2_e1nv4")
region_enabled = true
region_rect = Rect2(224, 512, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("CircleShape2D_dhngt")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("3_534p2")
visuals = NodePath("../Visuals")
outline_color = Color(0.914161, 0.904956, 0.864003, 1)
outline_thickness = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
